etc/iptables/iptables.rules
*filter
:INPUT DROP [5:260]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [584:81192]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A INPUT -s 10.0.0.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 10.0.1.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 10.0.0.0/24 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -s 10.0.1.0/24 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -j ACCEPT
-A INPUT -s 172.16.0.0/12 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -j ACCEPT
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "INPUT DROP: "
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 -j ACCEPT
-A FORWARD -o docker0 -j ACCEPT
-A FORWARD -i br-+ -j ACCEPT
-A FORWARD -o br-+ -j ACCEPT
-A FORWARD -i cni0 -j ACCEPT
-A FORWARD -o cni0 -j ACCEPT
-A FORWARD -i podman+ -j ACCEPT
-A FORWARD -o podman+ -j ACCEPT
-A FORWARD -i cni-podman+ -j ACCEPT
-A FORWARD -o cni-podman+ -j ACCEPT
-A FORWARD -i flannel+ -j ACCEPT
-A FORWARD -o flannel+ -j ACCEPT
-A FORWARD -i cali+ -j ACCEPT
-A FORWARD -o cali+ -j ACCEPT
-A FORWARD -i vboxnet+ -j ACCEPT
-A FORWARD -o vboxnet+ -j ACCEPT
-A FORWARD -i docker0 -o enp3s0 -j ACCEPT
-A FORWARD -i br-+ -o enp3s0 -j ACCEPT
-A FORWARD -i cni0 -o enp3s0 -j ACCEPT
-A FORWARD -i podman+ -o enp3s0 -j ACCEPT
-A FORWARD -i cni-podman+ -o enp3s0 -j ACCEPT
-A FORWARD -i enp3s0 -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i enp3s0 -o br-+ -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i enp3s0 -o cni0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i enp3s0 -o podman+ -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i enp3s0 -o cni-podman+ -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m limit --limit 5/min -j LOG --log-prefix "FORWARD DROP: "
COMMIT
